@@ -1,4 +1,5 @@
-2009-0x-0x Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
+2009-05-09 Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
+	* add statistics for total system call elapsed time
 	* add signal to notify caller when initialization is done
 	* add cache timeout option to reduce long-term memory usage
 
